--- a/colortoy.css
+++ b/colortoy.css
@@ -4,6 +4,12 @@ body {
     font-family: Varela Round;
 }
 
+#theHeader {
+    font-size: 36px;
+    border-bottom: 2px solid black;
+    margin-bottom: 60px;
+}
+
 #thePage {
     width: 800px;
     margin: 0px auto;
