--- a/chromatico.css
+++ b/chromatico.css
@@ -37,18 +37,20 @@ body {
 #displayArea {
     width: 100%;
     height: 100%;
-    background: #ccc;
+    background-color: #ccc;
+    background-image: url('img/bgtile.png');
+    background-repeat: repeat;
 }
 
 #theCanvas {
     position: relative;
+    box-shadow: 3px 3px 30px black;
 }
 
 #theSidebar {
     position: absolute;
     top: 0px;
     right: 0px;
-/*    background-color: #333;*/
     background-color: rgba(51, 51, 51, .8);
     padding: 20px;
     border-bottom-left-radius: 8px;
@@ -98,7 +100,7 @@ body {
     left: 0px;
     bottom: 0px;
     padding: 20px;
-    background-color: #333;
+    background-color: rgba(51, 51, 51, .8);
     border-top-right-radius: 8px;
 }
 
@@ -145,12 +147,10 @@ body {
 /*}*/
 
 /*button, input, select {*/
-/*    border: 1px solid black;*/
-/*    background: #666;*/
-/*    color: #eee;*/
-/*    height: 27px;*/
-/*    padding: 2px 6px 3px 6px;*/
-/*    margin: 2px;*/
+/*    border: 1px solid #ccc;*/
+/*    background: #333;*/
+/*    color: #ccc;*/
+/*    border-radius: 4px;*/
 /*}*/
 
 #colorSliders div.ui-slider {
@@ -161,13 +161,11 @@ body {
 }
 
 #colorSliders a.ui-slider-handle {
-    width: 0px;
-    height: 0px;
+    width: 12px;
+    height: 12px;
+    background-image: url('img/arrow.png');
     background-color: transparent;
-    background-image: none;
-    border-width: 3px 6px 11px 6px;
-    border-radius: 0px;
-    border-color: transparent transparent #ccc transparent;
-    border-style: dotted;
+    border: none;
+    margin-top: 3px;
     margin-left: -6px;
 }
