new logo + image buttons, but drop-down and form fields need work

--- a/chromatico.css
+++ b/chromatico.css
@@ -19,9 +19,10 @@ body {
 
 #theHeader {
     margin-bottom: 8px;
-    font-size: 16px;
-    color: #fff;
-    text-align: center;
+    width: 120px;
+    height: 13px;
+    background: url(img/sprites.png);
+    background-position: -8px -94px;
 }
 
 #thePage {
@@ -54,7 +55,7 @@ body {
     background-color: rgba(51, 51, 51, .8);
     padding: 20px;
     border-bottom-left-radius: 8px;
-    color: #ccc;
+    color: white;
 }
 
 #theColors {
@@ -89,10 +90,6 @@ body {
 
 #colorButtons {
     margin-bottom: 15px;
-}
-
-#colorSliders {
-    
 }
 
 #theButtons {
@@ -146,16 +143,72 @@ body {
 /*    height: 16px;*/
 /*}*/
 
-/*button, input, select {*/
-/*    border: 1px solid #ccc;*/
-/*    background: #333;*/
-/*    color: #ccc;*/
-/*    border-radius: 4px;*/
-/*}*/
+#theButtons button {
+    width: 62px;
+    height: 62px;
+    background-image: url(img/sprites.png);
+    background-color: transparent;
+    border: 0px;
+    border-radius: 2px;
+}
+
+#theButtons button:hover {
+    background-color: #000;
+}
+
+button#shuffle {
+    background-position: -1px -1px;
+}
+
+button#recompose {
+    background-position: -113px -1px;
+}
+
+button#download {
+    background-position: -57px -1px;
+}
+
+button#clearCustomSize {
+    background: none;
+}
+
+#colorButtons button,
+#colorControls button {
+    width: 32px;
+    height: 32px;
+    background-color: transparent;
+    border: 0px;
+    border-radius: 2px;
+    background-image: url(img/sprites.png);
+}
+
+button#fewerColors {
+    background-position: -36px -60px;
+}
+
+button#fewerColors:hover {
+    background-position: -132px -60px;
+}
+
+button#moreColors {
+    background-position: -4px -60px;
+}
+
+button#moreColors:hover {
+    background-position: -100px -60px;
+}
+
+button#newColor {
+    background-position: -68px -60px;
+}
+
+#colorSliders {
+    
+}
 
 #colorSliders div.ui-slider {
     border: 0px;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid white;
     border-radius: 0px;
     background: none;
 }
