--- a/chromatico.css
+++ b/chromatico.css
@@ -20,9 +20,9 @@ body {
 #theHeader {
     margin-bottom: 8px;
     width: 120px;
-    height: 13px;
+    height: 17px;
     background: url(img/sprites.png);
-    background-position: -8px -94px;
+    background-position: -8px -96px;
 }
 
 #thePage {
@@ -152,20 +152,40 @@ body {
     border-radius: 2px;
 }
 
-#theButtons button:hover {
-    background-color: #000;
-}
-
 button#shuffle {
     background-position: -1px -1px;
 }
 
+button#shuffle:hover {
+    background-position: -193px -1px;
+}
+
+button#shuffle:active {
+    background-position: -192px 0px;
+}
+
 button#recompose {
-    background-position: -113px -1px;
+    background-position: -129px -1px;
+}
+
+button#recompose:hover {
+    background-position: -321px -1px;
+}
+
+button#recompose:active {
+    background-position: -320px 0px;
 }
 
 button#download {
-    background-position: -57px -1px;
+    background-position: -65px -1px;
+}
+
+button#download:hover {
+    background-position: -257px -1px;
+}
+
+button#download:active {
+    background-position: -256px 0px;
 }
 
 button#clearCustomSize {
