--- a/css/chromatico.css
+++ b/css/chromatico.css
@@ -18,11 +18,11 @@ body {
 }
 
 #theHeader {
-    margin-bottom: 8px;
-    width: 120px;
-    height: 17px;
-    background: url(img/sprites.png);
-    background-position: -8px -96px;
+    margin-bottom: 24px;
+    width: 200px;
+    height: 32px;
+    background: url(../img/sprites.png);
+    background-position: 0px 0px;
 }
 
 #thePage {
@@ -39,7 +39,7 @@ body {
     width: 100%;
     height: 100%;
     background-color: #ccc;
-    background-image: url('img/bgtile.png');
+    background-image: url('../img/bgtile.png');
     background-repeat: repeat;
 }
 
@@ -52,18 +52,22 @@ body {
     position: absolute;
     top: 0px;
     right: 0px;
+    width: 200px;
     background-color: rgba(51, 51, 51, .8);
     padding: 20px;
     border-bottom-left-radius: 8px;
     color: white;
 }
 
+#colorsAndSliders {
+    text-align: right;
+}
+
 #theColors {
-/*    border: 2px solid #ccc;*/
 	padding: 0px;
 	width: 120px;
-/*    margin: 10px auto;*/
-    margin: 0px 0px 10px 0px;
+    margin: 0px;
+    float: left;
 }
 
 #theColors li {
@@ -89,36 +93,82 @@ body {
 }
 
 #colorButtons {
-    margin-bottom: 15px;
+    float: right;
 }
 
-#theButtons {
-    position: absolute;
-    left: 0px;
-    bottom: 0px;
-    padding: 20px;
-    background-color: rgba(51, 51, 51, .8);
-    border-top-right-radius: 8px;
+#colorSliders {
+    clear: both; 
+    padding: 24px 0px 14px 0px;
+}
+
+#colorSliders div.ui-slider {
+    border: 0px;
+    border-top: 1px solid white;
+    border-radius: 0px;
+    background: none;
+}
+
+#colorSliders a.ui-slider-handle {
+    width: 12px;
+    height: 12px;
+    background-image: url('../img/arrow.png');
+    background-color: transparent;
+    border: none;
+    margin-top: 3px;
+    margin-left: -6px;
+}
+
+#sizeMenu {
+    width: 200px;
 }
 
 #customSize {
     display: inline;
+    font-family: Varela Round;
+    font-size: 14px;
+    line-height: 30px;
+}
+
+#customSize input {
+    font-family: Varela Round;
+    font-size: 14px;
+    text-align: right;
+    width: 40px;
+    background: transparent;
+    color: white;
+    border-width: 0px 0px 2px 0px;
+}
+
+#customSize .theX {
+    margin: 0px 14px 0px 14px;
+}
+
+button#clearCustomSize {
+    width: 32px;
+    height: 32px;
+    padding: 0px;
+    margin: 0px 0px 0px 14px;
+    vertical-align: middle;
+    background-color: transparent;
+    border: 0px;
+    background-image: url(../img/sprites.png);
+    background-position: -256px -32px;
+}
+
+button#clearCustomSize:hover {
+    background-position: -256px -64px;
 }
 
 #theFooter {
     position: absolute;
-    right: 0px;
-    bottom: 0px;
-    background-color: #333;
-    border-top-left-radius: 8px;
+    right: 10px;
+    bottom: 10px;
 }
 
 #theFooter div {
     color: #ccc;
     font-size: 12px;
     text-align: right;
-    margin: 8px;
-    padding-top: 8px;
 }
 
 #theFooter a {
@@ -143,53 +193,56 @@ body {
 /*    height: 16px;*/
 /*}*/
 
+#theButtons {
+    margin: 14px 0px 0px 0px;
+}
+
 #theButtons button {
     width: 62px;
     height: 62px;
-    background-image: url(img/sprites.png);
+    background-image: url(../img/sprites.png);
     background-color: transparent;
     border: 0px;
     border-radius: 2px;
+    margin: 0px;
+    padding: 0px;
 }
 
 button#shuffle {
-    background-position: -1px -1px;
+    background-position: 0px -32px;
 }
 
 button#shuffle:hover {
-    background-position: -193px -1px;
+    background-position: 0px -96px;
 }
 
 button#shuffle:active {
-    background-position: -192px 0px;
+    background-position: 1px -95px;
 }
 
 button#recompose {
-    background-position: -129px -1px;
+    background-position: -64px -32px;
+    margin: 0px 3px 0px 3px;
 }
 
 button#recompose:hover {
-    background-position: -321px -1px;
+    background-position: -64px -96px;
 }
 
 button#recompose:active {
-    background-position: -320px 0px;
+    background-position: -63px -95px;
 }
 
 button#download {
-    background-position: -65px -1px;
+    background-position: -128px -32px;
 }
 
 button#download:hover {
-    background-position: -257px -1px;
+    background-position: -128px -96px;
 }
 
 button#download:active {
-    background-position: -256px 0px;
-}
-
-button#clearCustomSize {
-    background: none;
+    background-position: -127px -95px;
 }
 
 #colorButtons button,
@@ -199,46 +252,26 @@ button#clearCustomSize {
     background-color: transparent;
     border: 0px;
     border-radius: 2px;
-    background-image: url(img/sprites.png);
+    background-image: url(../img/sprites.png);
 }
 
 button#fewerColors {
-    background-position: -36px -60px;
+    background-position: -192px -32px;
 }
 
 button#fewerColors:hover {
-    background-position: -132px -60px;
+    background-position: -192px -64px;
 }
 
 button#moreColors {
-    background-position: -4px -60px;
+    background-position: -224px -32px;
 }
 
 button#moreColors:hover {
-    background-position: -100px -60px;
+    background-position: -224px -64px;
 }
 
 button#newColor {
-    background-position: -68px -60px;
+    background-position: -288px -32px;
 }
 
-#colorSliders {
-    
-}
-
-#colorSliders div.ui-slider {
-    border: 0px;
-    border-top: 1px solid white;
-    border-radius: 0px;
-    background: none;
-}
-
-#colorSliders a.ui-slider-handle {
-    width: 12px;
-    height: 12px;
-    background-image: url('img/arrow.png');
-    background-color: transparent;
-    border: none;
-    margin-top: 3px;
-    margin-left: -6px;
-}
