--- a/src/layout.scss
+++ b/src/layout.scss
@@ -1,5 +1,9 @@
 @import './vars.scss';
 
+* {
+    box-sizing: border-box;
+}
+
 html,
 body {
     width: 100%;
@@ -18,30 +22,32 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
 
     .inner {
         width: 100%;
         height: 100%;
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
+        position: relative;
+
+        @media screen and (max-width: $breakpoint) {
+            &.sidebar-active {
+                width: auto;
+                left: $sidebar-offset;
+            }
+        }
     }
 }
 
 #display {
     height: 100%;
     width: 100%;
+    padding: 20px;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-
-    @media screen and (max-width: $breakpoint) {
-        &.sidebar-active {
-            width: auto;
-            left: $sidebar-offset;
-        }
-    }
 }
 
 #canvas {
@@ -55,25 +61,18 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    
-    @media screen and (max-width: $breakpoint) {
-        &.sidebar-active {
-            position: relative;
-            left: $sidebar-offset;
-        }
-    }
 }
 
 #menu {
     position: absolute;
     top: 0;
     left: 0;
-    margin: 20px;
+    padding: 20px;
     width: 40px;
     height: 40px;
 
     @media screen and (max-width: $breakpoint) {
-        margin: 10px;
+        padding: 10px;
     }
 
     &.sidebar-active {
@@ -86,7 +85,7 @@ body {
     width: $sidebar-desktop;
     min-width: $sidebar-desktop;
     height: 100%;
-    margin: 20px;
+    padding: 20px;
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
 
@@ -97,7 +96,7 @@ body {
             position: absolute;
             width: $sidebar-mobile;
             min-width: $sidebar-mobile;
-            margin: 10px;
+            padding: 10px;
             left: 0;
             top: 0;
         }
