--- a/src/vars.scss
+++ b/src/vars.scss
@@ -6,4 +6,4 @@ $lighter-gray: #fff;
 $breakpoint: 425px;
 $sidebar-mobile: 225px;
 $sidebar-desktop: 250px;
-$sidebar-offset: $sidebar-mobile + 40px;
+$sidebar-offset: $sidebar-mobile;
