--- a/src/layout.scss
+++ b/src/layout.scss
@@ -1,9 +1,5 @@
 @import './vars.scss';
 
-* {
-    box-sizing: border-box;
-}
-
 html,
 body {
     width: 100%;
@@ -43,7 +39,6 @@ body {
 #display {
     height: 100%;
     width: 100%;
-    padding: 20px;
     position: relative;
     display: flex;
     align-items: center;
@@ -67,12 +62,12 @@ body {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 20px;
+    margin: 20px;
     width: 40px;
     height: 40px;
 
     @media screen and (max-width: $breakpoint) {
-        padding: 10px;
+        margin: 10px;
     }
 
     &.sidebar-active {
@@ -82,6 +77,7 @@ body {
 
 #sidebar {
     display: none;
+    box-sizing: border-box;
     width: $sidebar-desktop;
     min-width: $sidebar-desktop;
     height: 100%;
@@ -90,7 +86,8 @@ body {
     -webkit-overflow-scrolling: touch;
 
     &.sidebar-active {
-        display: block;
+        display: flex;
+        flex-direction: column;
 
         @media screen and (max-width: $breakpoint) {
             position: absolute;
