Little more room for mobile sidebar

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -6,4 +6,4 @@ $lighter-gray: #fff;
 $breakpoint: 425px;
 $sidebar-mobile: 250px;
 $sidebar-desktop: 300px;
-$sidebar-offset: $sidebar-mobile;
+$sidebar-offset: $sidebar-mobile + 10;
