Fix CNAME and mixed sec issue

--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,5 +1,5 @@
 @import './vars.scss';
-@import url(http://fonts.googleapis.com/css?family=Varela+Round);
+@import url(https://fonts.googleapis.com/css?family=Varela+Round);
 
 html,
 body,
